--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "io.freefair.lombok" version "6.6.1"
 }
 
 group 'org.example'
@@ -15,7 +16,6 @@ ext {
 }
 
 dependencies {
-    //implementation 'springcore'
     implementation "org.springframework:spring-core:$springVersion"
     implementation "org.springframework:spring-context:$springVersion"
 
