Java and annotation based bean configuration - add ApplicationConfiguration that replace application.xml (already not used)

--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,10 @@ dependencies {
     implementation "org.springframework:spring-context:$springVersion"
 
     //using for annotation based bean configuration (for spring 5.3 - use java ee)
+    //JSR 250
     implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
+
+    implementation 'javax.inject:javax.inject:1'
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
