Spring Boot logging starter: - change all console out with logging using (by default - logback throw sl4j); - adding logging to file (by default will create new log file with same name +index when file will be 10Mb); - add to excludes for git .log files

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,10 @@ db:
 spring:
   profiles:
     active: qa
+logging:
+  level:
+    root: warn
+    com.tyatsura.spring.database.pool: debug
+  file:
+    name: application.log
+    path: /
