Spring Boot test starter: - create custom annotation for integration tests (@IT); - create integration and unit test for MoneyService; - define test yml property file; - redefine spring.properties file for test; - some mechanics of working with dirty context.

--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.postgresql:postgresql'
 
-    //will be deleted later with starter
-    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
