Spring Data Transactions: - fix of data.sql and add drop script; - refactoring of integration package; - increase log level of tests; - using of @Transactional annotation

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -3,7 +3,7 @@ db:
   password: testPass
 logging:
   level:
-    root: trace
+    root: warn
     org.springframework: warn
   file:
     name: test.log
