--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -3,7 +3,7 @@ db:
   password: testPass
 logging:
   level:
-    root: warn
+    root: info
     org.springframework: warn
   file:
     name: test.log
